Table filetrove {
  version TEXT
  initdate TEXT
  lastupdate TEXT
}

Table sessionsmd {
  uuid TEXT
  starttime TEXT
  endtime TEXT
  project TEXT
  archivistname TEXT
  mountpoint TEXT
  pathseparator TEXT
  exifflag TEXT
  dublincoreflag TEXT
  yaraflag TEXT
  yarasource TEXT
  xattrflag TEXT
  ntfsadsflag TEXT
  filetroveversion TEXT
  filetrovedbversion TEXT
  nsrlversion TEXT
  siegfriedversion TEXT
  goversion TEXT
}

TABLE dublincore{
  uuid TEXT
  sessionuuid TEXT
  title TEXT
  creator TEXT
  contributor TEXT
  publisher TEXT
  subject TEXT
  description TEXT
  date TEXT
  language TEXT
  type TEXT
  format TEXT
  identifier TEXT
  source TEXT
  relation TEXT
  rights TEXT
  coverage TEXT
}

TABLE files {
  fileuuid TEXT
  sessionuuid TEXT
  filename TEXT
  filepath TEXT
  filenameextension TEXT
  filesize INTEGER
  filemd5 TEXT
  filesha1 TEXT
  filesha256 TEXT
  filesha512 TEXT
  fileblake2b TEXT
  filesffmt TEXT
  filesfmime TEXT
  filesfformatname TEXT
  filesfformatversion TEXT
  filesfidentnote TEXT
  filesfidentproof TEXT
  filectime TEXT
  filemtime TEXT
  fileatime TEXT
  filebtime TEXT
  filensrl TEXT
  fileentropy REAL
  hierarchy INTEGER
}

TABLE artifacts {artifactsuuid TEXT
  sessionuuid TEXT
  path TEXT
  registry TEXT
  type TEXT
  description TEXT
}

TABLE directories{
  diruuid TEXT
  sessionuuid TEXT
  dirname TEXT
  dirpath TEXT
  dircttime TEXT
  dirmtime TEXT
  diratime TEXT
  hierarchy INTEGER
}

TABLE exif{
  exifuuid TEXT
  sessionuuid TEXT
  fileuuid TEXT
  exifversion TEXT
  datetime TEXT
  datetimeorig TEXT
  artist TEXT
  copyright TEXT
  make TEXT
  xptitle TEXT
  xpcomment TEXT
  xpauthor TEXT
  xpkeywords TEXT
  xpsubject TEXT
}

TABLE yara{
  yaraentryuuid TEXT
  sessionuuid TEXT
  fileuuid TEXT
  rulename TEXT
}

TABLE xattr{
  xattruuid TEXT
  sessionuuid TEXT
  fileuuid TEXT
  xattrname TEXT
  xattrvalue TEXT
}

TABLE ntfsads{
  ntfsadsuuid TEXT
  sessionuuid TEXT
  fileuuid TEXT
  adsname TEXT
  adsvalue TEXT
}

Ref: files.sessionuuid > sessionsmd.uuid
Ref: artifacts.sessionuuid > sessionsmd.uuid
Ref: exif.sessionuuid > sessionsmd.uuid
Ref: exif.fileuuid > files.fileuuid
Ref: directories.sessionuuid > sessionsmd.uuid
Ref: dublincore.sessionuuid > sessionsmd.uuid
Ref: yara.sessionuuid > sessionsmd.uuid
Ref: yara.fileuuid > files.fileuuid
Ref: xattr.sessionuuid > sessionsmd.uuid
Ref: xattr.fileuuid > files.fileuuid
Ref: ntfsads.sessionuuid > sessionsmd.uuid
Ref: ntfsads.fileuuid > files.fileuuid
